--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,15 @@
         <title>Matt Mutz | Full-stack .NET Developer in East-central Wisconsin USA</title>
         <link rel="stylesheet" href="style.css">       
     </head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3MWN1FQSBQ"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-3MWN1FQSBQ');
+    </script>
     <body id="portfolio">
         <h1>Developer Portfolio</h1>
         <p>Matt Mutz is a full-stack .NET developer in East-central Wisconsin USA.</p>
