--- a/public/project-experience.html
+++ b/public/project-experience.html
@@ -51,35 +51,44 @@
             <span class="industry">E-commerce</span>
         </h2>
         <h3 class="project">E-commerce site</h3>
+        <p class="description">
+            As part of a team, developed and maintained world-class e-commerce site for an industry-leading national brand
         <ul class="technologies">
             <li>C#</li>
             <li>ASP.NET</li>
-            <li>MVC</li>
+            <li>MVC</li>            
             <li>SQL Server</li>
         </ul>            
-        <ul>
-            <li>Developed video gallery to showcase product videos</li>
-            <li>Implemented JSON-LD on product pages</li>
+    
+        <h3 class="project">Video Content Gallery and Management System</h3>
+        <p class="description">Developed video gallery to showcase product videos</p>
+        <ul class="technologies">
+            <li>C#</li>
+            <li>ASP.NET</li>
+            <li>WPF</li>
+            <li>SQL Server</li>
         </ul>            
 
+        <h3 class="project">Structured Data for Product Details</h3>
+        <p class="description">Implemented rich snippets for products</p>
+        <ul class="technologies">
+            <li>C#</li>
+            <li>ASP.NET</li>
+            <li>SQL Server</li>
+        </ul>
         <h2>
             <span  class="industry">Manufacturing</span>
         </h2>
 
         <h3 class="project">Paint Defect Tracking</h3>
             <p class="description">            
-            The paint defect tracking system let paint finishing operators and coating engineers know about what defects are coming out on other parts and adjust the robot to fix
+            Maintained paint defect tracking system let paint finishing operators and coating engineers know about what defects are coming out on other parts and adjust the robot to fix
         </p>
 
         <ul class="technologies">
             <li>Classic ASP</li>
             <li>Visual Basic 6</li>
             <li>SQL Server</li>
-        </ul>
-                
-        <ul>
-            <li>Used ODBC to read plain text output from paint robot AS/400 and write to SQL database</li>
-            <li>Developed a Classic ASP application dashboard. The displays were designed to be used by paint finishing technicians to watch robot's status and to troubleshoot any issues such as dust and orange peel that may arise</li>
         </ul>
 
         <h3 class="project">Scientific Paper Collection & Printed Book Generation</h3>
@@ -146,3 +155,6 @@
     </body>
     <script src="styx.js"></script>
 </html>
+
+
+
