--- a/public/contact.html
+++ b/public/contact.html
@@ -38,7 +38,7 @@
       </a>
 
       <ul class="nav nav-pills">
-        <li class="nav-item"><a href="index.html" class="nav-link text-dark" aria-current="page">Home</a></li>
+        <li class="nav-item"><a href="index.html" class="nav-link text-dark" aria-current="page">Index</a></li>
         <li class="nav-item"><a href="about.html" class="nav-link text-dark">About</a></li>
         <li class="nav-item"><a href="project-experience.html" class="nav-link text-dark">Resume</a></li>
         <li class="nav-item"><a href="contact.html" class="nav-link text-dark active ">Contact</a></li>
@@ -48,7 +48,7 @@
 
         <div id="main" class="p-3">
             <h1>Contact Matt</h1>
-            <p><a href="mailto:matt@matt365.net">Email me</a>: <a href="mailto:matt@matt365.net">matt@matt365.net</a></p>
+            <p><a href="mailto:matt@matt365.net"><i class="fa-regular fa-envelope"></i>&nbsp;Email me</a>: <a href="mailto:matt@matt365.net">matt@matt365.net</a></p>
         </div>
         <footer class="footer p-4 bg-light d-flex flex-wrap justify-content-between align-items-center my-4 border-top">
             <div class="col-md-4 d-flex align-items-center">
