--- a/public/about.html
+++ b/public/about.html
@@ -38,7 +38,7 @@
       </a>
 
       <ul class="nav nav-pills">
-        <li class="nav-item"><a href="index.html" class="nav-link text-dark" aria-current="page">Home</a></li>
+        <li class="nav-item"><a href="index.html" class="nav-link text-dark" aria-current="page">Index</a></li>
         <li class="nav-item"><a href="about.html" class="nav-link text-dark  active ">About</a></li>
         <li class="nav-item"><a href="project-experience.html" class="nav-link text-dark">Resume</a></li>
         <li class="nav-item"><a href="contact.html" class="nav-link text-dark">Contact</a></li>
