--- a/public/contact.html
+++ b/public/contact.html
@@ -40,7 +40,7 @@
       <ul class="nav nav-pills">
         <li class="nav-item"><a href="index.html" class="nav-link text-dark" aria-current="page">Index</a></li>
         <li class="nav-item"><a href="about.html" class="nav-link text-dark">About</a></li>
-        <li class="nav-item"><a href="project-experience.html" class="nav-link text-dark">Resume</a></li>
+        <li class="nav-item"><a href="project-experience.html" class="nav-link text-dark">Experience</a></li>
         <li class="nav-item"><a href="contact.html" class="nav-link text-dark active ">Contact</a></li>
       </ul>
     </header>
