--- a/public/project-experience.html
+++ b/public/project-experience.html
@@ -40,7 +40,7 @@
         <ul class="nav nav-pills">
             <li class="nav-item"><a href="index.html" class="nav-link text-dark" aria-current="page">Index</a></li>
             <li class="nav-item"><a href="about.html" class="nav-link text-dark">About</a></li>
-            <li class="nav-item"><a href="project-experience.html" class="nav-link text-dark active">Resume</a></li>
+            <li class="nav-item"><a href="project-experience.html" class="nav-link text-dark active">Experience</a></li>
             <li class="nav-item"><a href="contact.html" class="nav-link text-dark">Contact</a></li>
         </ul>
     </header>
