--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
                 
                 <p><a href="https://github.com/mattmutz">I am a full-stack .NET developer</a> in east-central Wisconsin USA.</p>        
                 <h1>Code Exemplar</h1>
-                <p>Here are som  code examples represetntative of my work.</p>
+                <p>Here are some code examples represetntative of my work.</p>
                 <h2 class="project">Slice</h2>
                 <p>Slice is an API to return a sub-catalog of quantity-priced products to meet a specified quantity and budget.</p>
                 <ul class="technologies">
