--- a/public/index.html
+++ b/public/index.html
@@ -33,9 +33,10 @@
     <body class="thebody">
 
 <header class="d-flex flex-wrap justify-content-center p-3 mb-4 border-bottom">
-      <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-        <span class="fs-4 text-black">Matt Mutz | Full-stack .NET developer</span>
-      </a>
+    <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+        <span class="fs-4 text-black">Matt Mutz | Full-stack .NET and Node.js developer</span>
+    </a>
+
 
       <ul class="nav nav-pills">
         <li class="nav-item"><a href="index.html" class="nav-link text-dark active" aria-current="page">Index</a></li>
