--- a/public/project-experience.html
+++ b/public/project-experience.html
@@ -34,7 +34,7 @@
 
     <header class="d-flex flex-wrap justify-content-center p-3 mb-4 border-bottom">
         <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-            <span class="fs-4 text-black">Matt Mutz | Full-stack .NET and Nodejs developer</span>
+            <span class="fs-4 text-black">Matt Mutz | Full-stack .NET and Node.js developer</span>
         </a>
 
         <ul class="nav nav-pills">
