added link to code blog

--- a/public/index.html
+++ b/public/index.html
@@ -46,9 +46,12 @@
       </ul>
     </header>
         <div id="main" class="p-3">
-            <div id="portfolio">
-                
-                <p><a href="https://github.com/mattmutz">I am a full-stack .NET developer</a> in east-central Wisconsin USA.</p>        
+            <div class="jumbotron p-4 p-md-5 text-white rounded bg-dark">
+                Code blog with samples at <a href="https://matt365.net">matt365.net</a>
+            </div>
+            <p class="promo">I started a <a href="https://matt365.net" target="_blank" >code blog<a> to post code samples from time to time, using WordPress because this isn't very fun to maintain when there's a content management system that does it very well.</p>
+            <div id="portfolio">                
+                <p class="lead"><a href="https://github.com/mattmutz">I am a full-stack .NET developer</a> in east-central Wisconsin USA.</p>        
                 <h1>Code Exemplar</h1>
                 <p>Here are some code examples represetntative of my work.</p>
                 <h2 class="project">Slice</h2>
