updated action words on experience page

--- a/public/project-experience.html
+++ b/public/project-experience.html
@@ -81,7 +81,7 @@
 
         <h3 class="project">Paint Defect Tracking</h3>
             <p class="description">            
-            Maintained paint defect tracking system let paint finishing operators and coating engineers know about what defects are coming out on other parts and adjust the robot to fix
+            Created a paint defect tracking system let paint finishing operators and coating engineers know about what defects are coming out on other parts and adjust the robot to fix
         </p>
 
         <ul class="technologies">
@@ -92,7 +92,7 @@
 
         <h3 class="project">Scientific Paper Collection & Printed Book Generation</h3>
         <p class="description">
-            System to collect scientific papers from authors globally, and export metadata for assembly into printed conference materials
+            Created a system to collect scientific papers from authors globally, and export metadata for assembly into printed conference materials
         </p>
 
         <ul class="technologies">
