--- a/pages/about.html
+++ b/pages/about.html
@@ -38,10 +38,10 @@
     </a>
 
       <ul class="nav nav-pills">
-        <li class="nav-item"><a href="index.html" class="nav-link text-dark" aria-current="page">Index</a></li>
-        <li class="nav-item"><a href="about.html" class="nav-link text-dark  active ">About</a></li>
-        <li class="nav-item"><a href="project-experience.html" class="nav-link text-dark">Experience</a></li>
-        <li class="nav-item"><a href="contact.html" class="nav-link text-dark">Contact</a></li>
+        <li class="nav-item"><a href="/" class="nav-link text-dark" aria-current="page">Index</a></li>
+        <li class="nav-item"><a href="about" class="nav-link text-dark  active ">About</a></li>
+        <li class="nav-item"><a href="experience" class="nav-link text-dark">Experience</a></li>
+        <li class="nav-item"><a href="contact" class="nav-link text-dark">Contact</a></li>
       </ul>
     </header>
 
