--- a/pages/index.html
+++ b/pages/index.html
@@ -39,10 +39,10 @@
 
 
       <ul class="nav nav-pills">
-        <li class="nav-item"><a href="index.html" class="nav-link text-dark active" aria-current="page">Index</a></li>
-        <li class="nav-item"><a href="about.html" class="nav-link text-dark">About</a></li>
-        <li class="nav-item"><a href="project-experience.html" class="nav-link text-dark">Experience</a></li>
-        <li class="nav-item"><a href="contact.html" class="nav-link text-dark">Contact</a></li>
+        <li class="nav-item"><a href="/" class="nav-link text-dark active" aria-current="page">Index</a></li>
+        <li class="nav-item"><a href="about" class="nav-link text-dark">About</a></li>
+        <li class="nav-item"><a href="experience" class="nav-link text-dark">Experience</a></li>
+        <li class="nav-item"><a href="contact" class="nav-link text-dark">Contact</a></li>
       </ul>
     </header>
         <div id="main" class="p-3">
