--- a/pages/index.html
+++ b/pages/index.html
@@ -49,12 +49,22 @@
             <p class="display-1">Matt Mutz</p>
             <p class="display-5">Full-stack .NET developer in Fox Valley, east-central Wisconsin USA</p>
             <p class="lead">
-                I started a code blog with examples at <a href="https://matt365.net" target="_blank">matt365.net</a> and you can view my <a href="https://github.com/mattmutz" target="_blank">GitHub profile here</a>.
+               You can view my <a href="https://github.com/mattmutz" target="_blank">GitHub profile here</a>.
             </p>
 
             <div id="portfolio" class="mt-5">
                 <h1>Code Exemplar</h1>
-                <p>Here are some code examples represetntative of my work.</p>
+                <p>Here are some examples of code I've written.</p>
+                <h2 class="project">Send free email using Azure Communication Services</h2>
+                <p>
+                    This is a .NET 6 C# Azure Function that uses free Azure resources to send an email through Azure Communication Services when a contact form is submitted.
+                </p>
+                <ul class="technologies">
+                    <li>HTML, CSS, JavaScript</li>
+                    <li>Azure Function</li>
+                    <li>Azure Communication Services</li>
+                </ul>     
+                 <p><a class="btn btn-primary wmh-btn" target="_blank" href="https://github.com/mattmutz/AzureFunctionSendAzureCommEmail">GitHub repo</a></p>
                 <h2 class="project">Slice</h2>
                 <p>Slice is an API to return a sub-catalog of quantity-priced products to meet a specified quantity and budget.</p>
                 <ul class="technologies">
@@ -63,7 +73,6 @@
             <li>SQL Azure</li>
             <li>Azure App Service</li>
         </ul>            
-    
                 <p><a class="btn btn-primary wmh-btn" target="_blank" href="https://slice-demo.azurewebsites.net/">View Slice demo</a></p>
                 <h2 class="project">Developer Portfolio</h2>
                 <p>Today is <span id="todayDate">trees day</span>, and I started this site <span id='days'>-1</span> days ago using GitHub Copilot, as an Express app serving static html, css, and js.</p>
