--- a/pages/index.html
+++ b/pages/index.html
@@ -46,8 +46,8 @@
       </ul>
     </header>
         <div id="main" class="p-3">
-            <p class="display-1">Matt Mutz</p>
-            <p class="display-5">Full-stack .NET developer in Fox Valley, east-central Wisconsin USA</p>
+       <!--      <p class="display-1">Matt Mutz</p>
+            <p class="display-5">Full-stack .NET developer in Fox Valley, east-central Wisconsin USA</p> -->
             <p class="lead">
                You can view my <a href="https://github.com/mattmutz" target="_blank">GitHub profile here</a>.
             </p>
