tidy up content

--- a/pages/project-experience.html
+++ b/pages/project-experience.html
@@ -46,6 +46,10 @@
     </header>
 
     <div id="main" class="p-3">
+        <h1>Experience</h1>
+        <p class="lead">
+            This is a sample of the projects I've worked on over the years, chosen for the interesting things I learned by doing them. Curious about something? <a href="contact">Contact me</a> and I'll happily tell you more.
+        </p>
         <h1>Project Experience</h1>
         <h2>
             <span class="industry">E-commerce</span>
