--- a/pages/about.html
+++ b/pages/about.html
@@ -47,7 +47,9 @@
 
     <div id="main" class="p-3">
         <h1>About Matt</h1>
-        <p>I am a full-stack .NET C# developer with experience building robust and scalable software applications. I am committed to writing efficient code that is easy to understand, maintain, and scale. I have a strong understanding of software design principles and I always strive to implement best practices in my work. With experience developing both front-end and back-end software, I build robust and scalable web applications that meet the needs of businesses and organizations across a wide range of industries. Whether you're looking to build a custom web application from scratch or you need to modernize or optimize an existing application, I have expertise and experience to deliver high-quality solutions that exceed your expectations.</p>
+        <p>
+            I am a full-stack .NET C# developer with experience building robust and scalable software applications. I am committed to writing code that is easy to understand, maintain, and scale.
+        </p>
         <p><a href="mailto:matt@matt365.net" class="contact" target="_blank">Email me</a>.</p>
     </div>
     
