--- a/pages/contact.html
+++ b/pages/contact.html
@@ -34,7 +34,7 @@
 
 <header class="d-flex flex-wrap justify-content-center p-3 mb-4 border-bottom">
     <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-        <span class="fs-4 text-black">Matt Mutz | Full-stack .NET and Node.js developer</span>
+        <span class="fs-4 text-black">Matt Mutz | Full-stack .NET developer</span>
     </a>
 
       <ul class="nav nav-pills">
@@ -50,7 +50,7 @@
             <h1>Contact Matt</h1>
             <p><a href="mailto:matt@matt365.net"><i class="fa-regular fa-envelope"></i>&nbsp;Email me</a>: <a href="mailto:matt@matt365.net">matt@matt365.net</a></p>
         </div>
-        <footer class="footer p-4 bg-light d-flex flex-wrap justify-content-between align-items-center my-4 border-top">
+        <footer class="footer p-4 bg-light d-flex flex-wrap justify-content-between align-items-center my-4 border-top my-nobottom">
             <div class="col-md-4 d-flex align-items-center">
                 <span class="text-muted">&copy; 2023 Matt Mutz last modified August 2023</span>
             </div>
