--- a/pages/project-experience.html
+++ b/pages/project-experience.html
@@ -34,7 +34,7 @@
 
     <header class="d-flex flex-wrap justify-content-center p-3 mb-4 border-bottom">
         <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-            <span class="fs-4 text-black">Matt Mutz | Full-stack .NET and Node.js developer</span>
+            <span class="fs-4 text-black">Matt Mutz | Full-stack .NET developer</span>
         </a>
 
         <ul class="nav nav-pills">
@@ -46,11 +46,11 @@
     </header>
 
     <div id="main" class="p-3">
-        <h1>Experience</h1>
-        <p class="lead">
+       
+        <h1>Project Experience</h1>
+         <p class="lead">
             This is a sample of the projects I've worked on over the years, chosen for the interesting things I learned by doing them. Curious about something? <a href="contact">Contact me</a> and I'll happily tell you more.
         </p>
-        <h1>Project Experience</h1>
         <h2>
             <span class="industry">E-commerce</span>
         </h2>
@@ -101,7 +101,7 @@
 
         <ul class="technologies">
             <li>Classic ASP</li>
-            <li>Office VBA</li>
+            <li>Microsoft Office VBA</li>
             <li>SQL Server</li>
         </ul>
         <h2>
@@ -142,7 +142,7 @@
 
     </div>
 
-       <footer class="footer p-4 bg-light d-flex flex-wrap justify-content-between align-items-center my-4 border-top">
+       <footer class="footer p-4 bg-light d-flex flex-wrap justify-content-between align-items-center my-4 border-top my-nobottom">
             <div class="col-md-4 d-flex align-items-center">
                 <span class="text-muted">&copy; 2023 Matt Mutz last modified August 2023</span>
             </div>
