--- a/pages/about.html
+++ b/pages/about.html
@@ -34,7 +34,7 @@
 
 <header class="d-flex flex-wrap justify-content-center p-3 mb-4 border-bottom">
     <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-        <span class="fs-4 text-black">Matt Mutz | Full-stack .NET and Node.js developer</span>
+        <span class="fs-4 text-black">Matt Mutz | Full-stack .NET developer</span>
     </a>
 
       <ul class="nav nav-pills">
@@ -48,12 +48,12 @@
     <div id="main" class="p-3">
         <h1>About Matt</h1>
         <p>
-            I am a full-stack .NET C# developer with experience building robust and scalable software applications. I am committed to writing code that is easy to understand, maintain, and scale.
+            I am a full-stack .NET C# developer with experience building robust and scalable software. I am committed to writing code that is easy to understand, maintain, and scale.
         </p>
         <p><a href="mailto:matt@matt365.net" class="contact" target="_blank">Email me</a>.</p>
     </div>
     
-     <footer class="footer p-4 bg-light d-flex flex-wrap justify-content-between align-items-center my-4 border-top">
+     <footer class="footer p-4 bg-light d-flex flex-wrap justify-content-between align-items-center my-4 border-top my-nobottom">
         <div class="col-md-4 d-flex align-items-center">
             <span class="text-muted">&copy; 2023 Matt Mutz last modified August 2023</span>
         </div>
